@startuml

abstract class Room{
-roomNumber:unsigned int
-isActive:bool
-isArchive:bool
+{abstract} canBeUsed(equipment:Equipment):bool
+<<virtual>> getInfo(): string
}

Room <|-- RehabillitationRoom
Room <|-- ConsultationRoom

enum Equipment

Room ..> Equipment : używa >

!ifndef UKRYJ_NOTATKI

note right of Room
Abstrakcyjna klasa reprezentująca sale.
roomNumber - numer sali
isActive - czy sala jest dostępna
isArchive - czy jest archiwalny
canBeUsed(equipment:Equipment):bool - określa czy dany pokój zawiera dany sprzęt
end note

!endif

@enduml